Add previous button

--- a/anota/index.html
+++ b/anota/index.html
@@ -581,6 +581,7 @@
         </div>
         <div id="relevanceButtons" class="d-flex d-flex-column justify-content-center align-text-bottom">
             <button id="export" class="btn btn-light btn-lg export">Exportar</button>
+            <button id="previous" class="btn btn-light btn-lg previous">Anterior</button>
         </div>
 
         <p>
