--- a/anota/index.html
+++ b/anota/index.html
@@ -596,7 +596,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
         crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
+    
+    <script src="https://anota.arquivo.pt/wayback/static/js/ruffle/ruffle.js"></script>
 </body>
 
 </html>
