--- a/anota/index.html
+++ b/anota/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang='en'>
+
 <head>
     <title>Annotator</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -263,6 +264,27 @@
                 });
             };
         }
+
+        function convertArchiveUrl(noFrameUrl) {
+            // Extract domain, timestamp and original URL from the noFrame format
+            const regex = /https?:\/\/([^\/]+)\/noFrame\/replay\/(\d+)\/(.*)/;
+            const match = noFrameUrl.match(regex);
+
+            if (!match) {
+                throw new Error('Invalid noFrame URL format');
+            }
+
+            const domain = match[1];
+            const timestamp = match[2];
+            const originalUrl = match[3];
+
+            // Add http:// protocol if not present in the original URL
+            const fullOriginalUrl = originalUrl.startsWith('http') ? originalUrl : `http://${originalUrl}`;
+
+            // Construct the wayback format URL with the same domain
+            return `https://${domain}/wayback//${timestamp}mp_/${fullOriginalUrl}`;
+        }
+
         function resolveUrl(relativeUrl) {
             return new URL(relativeUrl, window.location.href).href;
         }
@@ -277,13 +299,7 @@
             // get the title
             var title = result.title;
             // get the url
-
-            // replace all but the first two slashes with a single slash
-            var url = result.linkToNoFrame.replace("http://", "").replace("https://", "");
-            url = url.replace("//", "/");
-            var iframeURL = resolveUrl("//" + url);
-            url = "http://" + url;
-
+            var iframeURL = convertArchiveUrl(result.linkToNoFrame);
             var ourl = result.originalURL;
             // get the date
             var date = result.tstamp;
@@ -298,9 +314,9 @@
             if (query_changed) {
                 queryHasChanged()
             }
-            
+
             // hide the spinner after 10 seconds regardless of whether the iframe loads or not
-            setTimeout(() => { hideSpinner()}, 10000);
+            setTimeout(() => { hideSpinner() }, 10000);
 
             iframe.onload = () => {
                 console.log("iframe loaded, hide")
@@ -601,7 +617,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
         crossorigin="anonymous"></script>
-    
+
     <script src="https://anota.arquivo.pt/wayback/static/js/ruffle/ruffle.js"></script>
 </body>
 
